# market-analysis-agent

./: .env.example  .gitignore  Dockerfile  README.md  README_FR.md  docker-compose.yaml  main.py  pyproject.toml
app/: config.py  main.py
app/agent/: analysis_pipeline.py  analysis_pipeline_prompts.py  coordinator.py  researcher.py  researcher_prompts.py
app/api/: routes.py
app/data/cache/amazon_products/: B001T94BSI.json  B002H3B20A.json  B003UY2K60.json  B003UY6F4I.json  B004J609ZW.json  B005A5G52W.json  B005A5G57M.json  B005A9AQ28.json  B005OD839S.json  B005OD83HK.json  B005OD8438.json  B005OD84L0.json  B005OD857I.json  B006PK1K94.json  B0073JVB9U.json  B0096AAW1M.json  B009PCJFOQ.json  B00A40GJXS.json  B00JKTD3E2.json  B00Q6ZBUB6.json  B00Q6ZC4AM.json  B00RBA83MY.json  B00RBA878O.json  B013GIUCBO.json  B013GJ303K.json  B013GJ6AIW.json  B013GJDNJG.json  B01CB0NXGO.json  B01CB0RZ2M.json  B01CB0TGOW.json  B01DOHJPEW.json  B01KJ4C97I.json  B01L91BHFU.json  B01MCYS8W9.json  B01MXH5TZD.json  B06X9BMJG2.json  B06XS3RFYN.json  B072MGXVX5.json  B077PXTMXH.json  B077RTPRBW.json  (+193 more)
app/graph/: analysis_pipeline.py  analysis_pipeline_prompts.py  coordinator.py  coordinator_prompts.py  graph.py  researcher.py  state.py
app/schemas/: analyze.py  research.py
app/services/: amazon_product_service.py  amazon_search_service.py  google_trends_service.py  serpapi_service.py
app/tools/: fetch_reviews.py  google_trends.py  web_search.py
app/utils/: cache.py
reports/: iphone_16_pro_20260323T141300Z.md  nike_air_max_20260323T143021Z.md  orange_construction_cone_rental_20260323T135558Z.md
tests/agent/: test_analysis_pipeline.py  test_coordinator.py  test_researcher.py
tests/services/: test_amazon_product_service.py  test_amazon_search_service.py  test_google_trends_service.py  test_serpapi_service.py
tests/tools/: test_fetch_reviews.py  test_web_search.py
(+23 files in other folders)
