[project]
name = "market-analysis-agent-moov-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langsmith>=0.7.22",
    "serpapi>=1.0.2",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.mypy]
strict = true
python_version = "3.13"
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = ["tavily.*"]
follow_untyped_imports = true

dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.3",
    "pydantic-settings>=2.13.1",
    "pytest-asyncio>=1.3.0",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]
